# tasking-manager-client-python

./: .gitignore  LICENSE  README.md  pyproject.toml  timeline.ipynb
tasking_manager_client/: __init__.py  style.py  v1.py  v2.py
tests/: test_style.py  test_tm_api.py
