[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tasking_manager_client"
author = "Jarmo Kivekas"
author-email = "admin@guttula.com"
home-page = "https://github.com/jarmokivekas/tasking-manager-client-python"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"

requires = [
  # add dependencies to python packages in this array
  "loguru",
  "pandas",
  "geopandas",
  "requests"
]

[tool.flit.metadata.requires-extra]
test = [
  "pytest",
  "vcrpy",
  "flake8",
  "coverage",
  "flit"
]
